src/public/css/main.css
/*GLOBAL*/
a {
    color: black;
    text-decoration: none;
    font-size: 1.3rem;
}

html, body {
    height: 100%;
}

.flex {
    display:flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.evenspace {
    justify-content: space-between;
}

body {
    display: grid;
    grid-template-rows: min-content;
    grid-template-areas:
        "header header header"
        "main main main"
        "footer footer footer";
}

header {
    display: flex;
    background-color: gray;
    grid-area: header;
    margin-bottom: auto;
}

header img {
    margin-left: 0.4rem;
    height: 100px;
}

header nav ul {
    display: flex;
    line-height: 100px;
}

header nav ul li {
    padding: 0 0.3rem;
}

main {
    grid-area: main;
    margin-bottom: auto;
}

footer {
    margin-top: auto;
    grid-area: footer;
    text-align: center;
    background-color: gray;
    height: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/*QUIZ*/

#quiz-page {
    display: grid;
    justify-content: center;
}

#quiz-box {
    position: relative;
    background-color: rgb(255, 228, 196);
    border: 5px solid black;
    width: 600px;
    height: 600px;
    margin-top: 1.2rem;

    display: grid;
    grid-template-rows: min-content;
    row-gap: 1rem;
    grid-template-areas:
        "quiz-header"
        "quiz-main"
        "quiz-footer";
}

#quiz-head {
    grid-area: quiz-header;
    display: flex;
    justify-content: space-between;
    border-bottom: 2px solid #5f5d5d3f;
    padding: 0.5rem 0;
    margin-bottom: auto;
    line-height: 1.2rem;
}

#quiz-head h1 {
    font-size: 1.4rem;
    margin-left: 1.4rem;
}

#quiz-head button {
    margin-right: 1.4rem;
}

#quiz-main {
    grid-area: quiz-main;
}

.start-quiz {
    display: block;
    width: 300px;
    height: 150px;
    margin: 0 auto;
    width: 300px;
    height: 150px;
    font-size: 3rem;
    position: absolute;
    top: 50%;
    height: 100px;
    margin-top: -50px;
    left: 25%;
    background-color: rgb(38, 134, 186);
    border-radius: 30px;
}

#quiz-main cite h1 {
    font-size: 1.3rem;
    margin-left: 1.4rem;
}

#quiz-main .quiz-answers {
    margin-top: 1.2rem;
    margin-left: 1.4rem;
}

.quiz-correct-option {
    background-color: rgba(57, 146, 57, 0.775);
}

.quiz-wrong-option {
    background-color: rgba(255, 0, 0, 0.672);
}

#quiz-main .quiz-answers > div {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    margin-top: 0.1rem;
}

#quiz-main .quiz-answers > h1 {
    margin-top: 0.2rem;
}

#quiz-main .quiz-answers div > div {
    border: solid #17607b80 3px;
    border-radius: 0.2rem;
    padding: 0.5rem 1rem;
    margin-top: 0.3rem;
    width: 90%;
    cursor: pointer;
}
#quiz-main .quiz-answers div > div h2 {
    width: fit-content
}

#quiz-main .quiz-like-panel {
    margin-top: 2rem;
    text-align: center;
}

#quiz-footer {
    display: flex;
    justify-content: space-between;
    border-top: 2px solid #5f5d5d3f;
    padding: 0.5rem 0;
    margin-top: auto;
    grid-area: quiz-footer;
}

.quiz-total-score {
    font-size: 1.4rem;
}

#quiz-footer h2 {
    margin-left: 1.4rem;
}

#quiz-footer button {
    margin-left: 1.4rem;
    margin-right: 1.4rem;
}

#quiz-footer #nextSub {
   
}

#quiz-footer #prevSub {
   
}

